# S3Proxy4GCS

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  go.mod  go.sum  main.go  solutions.md  test_cases.md
.github/workflows/: benchmark.yml  e2e-tests.yml  multi-sdk-dns-cutting-tests.yml  multi-sdk-tests.yml
.qoder/repowiki/zh/content/: 开发指南.md  故障排除与FAQ.md  部署与运维.md
.qoder/repowiki/zh/content/API参考/: API参考.md  CORS配置API.md  健康检查端点.md  对象标签API.md  日志配置API.md  生命周期管理API.md  网站托管API.md
.qoder/repowiki/zh/content/安装与配置/: 安全凭证配置.md  安装与配置.md  安装步骤.md  环境变量配置.md  环境要求与依赖.md
.qoder/repowiki/zh/content/核心功能/: CORS配置管理.md  (+6 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
config/: settings.go
e2e_tests/: Dockerfile  benchmark_test.go  control_plane_test.go  data_plane_test.go  framework.go  framework_test.go  go.mod  metrics_collector.go  ops_test.go  prometheus_collector.go  stability_test.go
k8s/: backendconfig.yaml  benchmark-job.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pressure-gov2-job.yaml  service.yaml
k8s/monitoring/: s3proxy-dashboard.yaml  s3proxy-servicemonitor.yaml
pkg/metrics/: metrics.go
pkg/translate/: gcs_cors.go  gcs_cors_test.go  gcs_lifecycle.go  gcs_lifecycle_test.go  gcs_tagging.go  gcs_website.go  gcs_website_test.go
scripts/: aggregate_pressure_report.py  dns_cut.sh  run_pressure_phase.sh
sdk_tests/cpp/: CMakeLists.txt  s3proxy_test.cpp
sdk_tests/go-v1/: control_plane_test.go  data_plane_test.go  framework_test.go  go.mod
sdk_tests/go-v2/: control_plane_test.go  data_plane_test.go  framework_test.go  go.mod  go.sum
sdk_tests/go-v2/pressure/: Dockerfile  go.mod  main.go
sdk_tests/java-v1/: pom.xml
sdk_tests/java-v2/: pom.xml
sdk_tests/python/: conftest.py  requirements.txt  test_control_plane.py  test_data_plane.py
(+17 files in other folders)
